[package]
name = "typst_core"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Markus Hamacher <markus.hamacher16@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.40"
console_error_panic_hook = "0.1.7"
parking_lot = "0.12.3"
typst = "0.13.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
