[package]
name = "wolframe-typst-core"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Markus Hamacher <markus.hamacher16@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.40"
console_error_panic_hook = "0.1.7"
flate2 = "1.1.1"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tar = "0.4.44"
tsify = { version = "0.5.5", features = ["js"] }
typst = { version = "0.13.1" }
typst-assets = { version = "0.13.1", features = ["fonts"] }
typst-html = "0.13.1"
typst-svg = "0.13.1"
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
